...
              styles.iAgreeWith,
              styles.fdfdfdfTypo,
              {color: colors.actionColor},
              FontFamily['500'],
              Typography.text14,
            ]}>
            {t`Forget password?`}
          </Text>
        </TouchableOpacity>
      </View>
      <Stack size="s32" />
    </Animated.View>
  );
...
